Merchants will now respect the priority of import and export pallets